--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,34 +1,14 @@
 # Add Authors here
 johndoe:
-   name: John Doe
-   username: johndoe
-   site: http://johndoe.com
+   name: Choi MoonSeok
+   username: moonseoktech
+   bio: "안녕하세요, 최문석입니다 그래픽프로그래머와 게임개발에 관심이 있습니다"
+   site: "https://moonseokchoi-kr.github.io"
    avatar: johndoe.png
-   bio: "Hi I a John, a Web Developer and Designer."
-   email: mail@johndoe.com
+   email: moonseoktech@gmail.com
    social:
-      - title: "github"
-        url: "https://github.com/johndoe"
-      - title: "linkedin"
-        url: "https://www.linkedin.com/in/johndoe"
-      - title: "youtube"
-        url: "https://www.youtube.com/channel/UCSfLBFFfNU9r6ihfei6VeJw"
-      - title: "facebook"
-        url: "https://www.facebook.com/johndoe"
-      - title: "twitter"
-        url: "https://www.twitter.com/johndoe"
-      - title: "behance"
-        url: "https://behance.com/johndoe"
-      - title: "instagram"
-        url: "https://instagram.com/johndoe"
-      - title: "medium"
-        url: "https://medium.com/johndoe"
-      - title: "telegram"
-        url: "https://telegram.com/johndoe"
-      - title: "dribbble"
-        url: "https://dribbble.com/johndoe"
-      - title: "flickr"
-        url: "https://flickr.com/johndoe"
+       - title: "github"
+         url: "https://github.com/moonseokchoi-kr"
 
 xplor4r:
    name: Sujay kundu
