--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
 # Add Authors here
-johndoe:
+moon:
    name: Choi MoonSeok
    username: moonseoktech
    bio: "안녕하세요, 최문석입니다 그래픽프로그래머와 게임개발에 관심이 있습니다"
