--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: Choi MoonSeok
+author: moon
 author_bio: 안녕하세요 꾸준한 개발자가 되고싶은 최문석입니다. 
 author_email: "moonseoktech@gmail.com"
 author_location: Republic of Korea
